# sqmd

./: .gitignore  BENCHMARKING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: bump-version.yml  release.yml  rust.yml
crates/sqmd-bench/: Cargo.toml
crates/sqmd-bench/src/: main.rs
crates/sqmd-cli/: Cargo.toml
crates/sqmd-cli/src/: main.rs
crates/sqmd-core/: Cargo.toml
crates/sqmd-core/src/: call_extractor.rs  chunk.rs  chunker.rs  communities.rs  config.rs  context.rs  daemon.rs  dampening.rs  embed.rs  entities.rs  episodes.rs  files.rs  import_resolver.rs  index.rs  lib.rs  maintain.rs  mcp_server.rs  multi_project.rs  native.rs  ollama.rs  plugin.rs  query_cache.rs  relationships.rs  schema.rs  search.rs  vfs.rs  watcher.rs
crates/sqmd-core/src/languages/: c.rs  cmake.rs  cpp.rs  css.rs  go.rs  html.rs  java.rs  json.rs  markdown.rs  meson.rs  mod.rs  python.rs  qml.rs  ruby.rs  rust.rs  toml.rs  typescript.rs  yaml.rs
crates/sqmd-core/tests/: knowledge_integration.rs
docs/: ARCHITECTURE.md  ROADMAP.md  WHAT_IT_IS.md  schema.sql
docs/design/: entity-graph-redesign.md
skills/sqmd-review/: SKILL.md
skills/sqmd-review/references/: review-schema.md
