[package]
name = "sqmd-cli"
version = "3.0.0"
edition = "2024"

[[bin]]
name = "sqmd"
path = "src/main.rs"

[features]
default = ["native"]
native = ["sqmd-core/native"]
ollama = ["sqmd-core/ollama"]

[dependencies]
sqmd-core = { path = "../sqmd-core" }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde_json = "1"
