[package]
name = "sqmd-cli"
version = "3.4.1"
edition = "2024"

[[bin]]
name = "sqmd"
path = "src/main.rs"

[features]
default = ["native-metal"]
native = ["sqmd-core/native"]
native-metal = ["sqmd-core/native-metal"]

[dependencies]
sqmd-core = { path = "../sqmd-core" }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.34", features = ["bundled"] }
serde_json = "1"
libc = "0.2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
