[package]
name = "sqmd-core"
version = "1.0.0"
edition = "2021"

[features]
default = []
embed = ["dep:ort", "dep:ndarray", "dep:ureq", "dep:tokenizers"]

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
sqlite-vec = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }
ureq = { version = "3", optional = true }
tokenizers = { version = "0.21", optional = true }
ignore = "0.4"
walkdir = "2"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
tempfile = "3"
regex = "1"
