[package]
name = "sqmd-core"
version = "3.0.0"
edition = "2021"

[features]
default = ["native"]
native = ["dep:llama-cpp-2"]
ollama = ["dep:ureq"]

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
sqlite-vec = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
ureq = { version = "3", optional = true, features = ["json"] }
llama-cpp-2 = { version = "0.1", optional = true, features = ["metal"] }
ignore = "0.4"
walkdir = "2"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-cmake = "0.7"
tree-sitter-qmljs = "0.3"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
tempfile = "3"
regex = "1"
tree-sitter-ruby = "0.23"
tree-sitter-yaml = "0.7"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
